--- a/test_libgo_1/test_libgo_1.vcxproj
+++ b/test_libgo_1/test_libgo_1.vcxproj
@@ -44,12 +44,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)..\..\libgo;$(ProjectDir)..\..\libgo\libgo;$(ProjectDir)..\..\libgo\libgo\netio\windows;$(ProjectDir)..\..\libgo\tutorial;$(ProjectDir)..\..\boost_1_69_0;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)..\..\libgo\vs_proj\vs2017\x64\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)..\..\libgo;$(ProjectDir)..\..\libgo\libgo\netio\windows;$(ProjectDir)..\..\libgo\tutorial;$(ProjectDir)..\..\boost_1_69_0;$(ProjectDir)..\..\libgo\libgo;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(ProjectDir)..\..\libgo;$(ProjectDir)..\..\libgo\libgo\netio\windows;$(ProjectDir)..\..\libgo\tutorial;$(ProjectDir)..\..\boost_1_69_0;$(ProjectDir)..\..\libgo\libgo;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)..\..\libgo\vs_proj\vs2017\x64\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -59,10 +57,12 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_CONSOLE;ASIO_STANDALONE;_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;_WIN32_WINNT=0x0601;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>libgo.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libgo.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)..\..\libgo\vs_proj\vs2017\x64\Debug</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -75,12 +75,14 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_CONSOLE;ASIO_STANDALONE;_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;_WIN32_WINNT=0x0601;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>libgo.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libgo.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)..\..\libgo\vs_proj\vs2017\x64\Release</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
