--- a/test_asio_3/test_asio_3.vcxproj
+++ b/test_asio_3/test_asio_3.vcxproj
@@ -84,7 +84,7 @@
     <Text Include="bak_3a.txt" />
     <Text Include="bak_3b.txt" />
     <Text Include="bak_4a.txt" />
-    <Text Include="bak_5a.txt" />
+    <Text Include="bak_6c.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
