--- a/test_asio_3/test_asio_3.vcxproj.filters
+++ b/test_asio_3/test_asio_3.vcxproj.filters
@@ -8,5 +8,6 @@
     <Text Include="bak_3b.txt" />
     <Text Include="bak_4a.txt" />
     <Text Include="bak_6c.txt" />
+    <Text Include="bak_7b.txt" />
   </ItemGroup>
 </Project>
