--- a/test_asio_3/test_asio_3.vcxproj
+++ b/test_asio_3/test_asio_3.vcxproj
@@ -86,6 +86,7 @@
     <Text Include="bak_4a.txt" />
     <Text Include="bak_6c.txt" />
     <Text Include="bak_7b.txt" />
+    <Text Include="bak_7c.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
