--- a/test_uv_3/test_uv_3.vcxproj
+++ b/test_uv_3/test_uv_3.vcxproj
@@ -87,6 +87,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="xx_bbuffer.h" />
     <ClInclude Include="xx_buffer.h" />
     <ClInclude Include="xx_uv_cpp.h" />
     <ClInclude Include="xx_uv_cpp_echo.h" />
