--- a/test_uv_3/test_uv_3.vcxproj
+++ b/test_uv_3/test_uv_3.vcxproj
@@ -96,6 +96,7 @@
     <ClInclude Include="xx_bbuffer.h" />
     <ClInclude Include="xx_buffer.h" />
     <ClInclude Include="xx_coroutine.h" />
+    <ClInclude Include="xx_stackless.h" />
     <ClInclude Include="xx_uv_cpp.h" />
     <ClInclude Include="xx_uv_cpp_echo.h" />
     <ClInclude Include="xx_uv_cpp_package.h" />
