--- a/test_uv_3/test_uv_3.vcxproj
+++ b/test_uv_3/test_uv_3.vcxproj
@@ -93,15 +93,16 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="test_xx_uv_stackless.h" />
     <ClInclude Include="xx_bbuffer.h" />
     <ClInclude Include="xx_buffer.h" />
     <ClInclude Include="xx_coroutine.h" />
     <ClInclude Include="xx_stackless.h" />
     <ClInclude Include="xx_uv_base.h" />
     <ClInclude Include="test_xx_uv_echo.h" />
-    <ClInclude Include="xx_uv.h" />
+    <ClInclude Include="xx_uv_pack.h" />
     <ClInclude Include="xx_uv_coroutine.h" />
-    <ClInclude Include="xx_uv_pkg.h" />
+    <ClInclude Include="xx_uv_msg.h" />
     <ClInclude Include="xx_uv_stackless.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
