--- a/test_uv_3/test_uv_3.vcxproj
+++ b/test_uv_3/test_uv_3.vcxproj
@@ -93,6 +93,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="test_xx_uv_coroutine.h" />
     <ClInclude Include="test_xx_uv_stackless.h" />
     <ClInclude Include="xx_bbuffer.h" />
     <ClInclude Include="xx_buffer.h" />
