--- a/test_uv_8/test_uv_8.vcxproj
+++ b/test_uv_8/test_uv_8.vcxproj
@@ -12,9 +12,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{85039DD4-098C-4B31-924A-0F4D884DF2F5}</ProjectGuid>
+    <ProjectGuid>{85039DD4-098C-4B31-924A-0F4D884DF2FC}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>test_uv_3</RootNamespace>
+    <RootNamespace>test_uv_4</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -43,12 +43,8 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)..\..\libgo;$(ProjectDir)..\..\libgo\libgo\netio\windows;$(ProjectDir)..\..\libgo\tutorial;$(ProjectDir)..\..\boost_1_69_0;$(ProjectDir)..\..\libgo\libgo;$(IncludePath)</IncludePath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(ProjectDir)..\..\libgo;$(ProjectDir)..\..\libgo\libgo\netio\windows;$(ProjectDir)..\..\libgo\tutorial;$(ProjectDir)..\..\boost_1_69_0;$(ProjectDir)..\..\libgo\libgo;$(IncludePath)</IncludePath>
-  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <PrecompiledHeader>
@@ -57,8 +53,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_CONSOLE;_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;_WIN32_WINNT=0x0601;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)../boost_1_69_0;$(SolutionDir)libuv/include;</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <AdditionalIncludeDirectories>$(SolutionDir)../boost_1_69_0;$(SolutionDir)libuv/include;$(SolutionDir)test_uv_3</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -76,8 +71,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_CONSOLE;_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;_WIN32_WINNT=0x0601;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)../boost_1_69_0;$(SolutionDir)libuv/include;</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>$(SolutionDir)../boost_1_69_0;$(SolutionDir)libuv/include;$(SolutionDir)test_uv_3</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -88,21 +82,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <FileType>CppClass</FileType>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="test_xx_uv_coroutine.h" />
-    <ClInclude Include="test_xx_uv_stackless.h" />
-    <ClInclude Include="xx_bbuffer.h" />
-    <ClInclude Include="xx_coroutine.h" />
-    <ClInclude Include="xx_list.h" />
-    <ClInclude Include="xx_object.h" />
-    <ClInclude Include="xx_stackless.h" />
-    <ClInclude Include="xx_uv.h" />
-    <ClInclude Include="xx_uv_coroutine.h" />
-    <ClInclude Include="xx_uv_stackless.h" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
