add tcp_ping_test code

--- a/test_asio_3/test_asio_3.vcxproj
+++ b/test_asio_3/test_asio_3.vcxproj
@@ -70,6 +70,7 @@
       <PreprocessorDefinitions>_CONSOLE;ASIO_STANDALONE;_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;_WIN32_WINNT=0x0601;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <AdditionalIncludeDirectories>$(ProjectDir)..\..\asio\asio\include;</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
