--- a/test_uv_a/test_uv_a.vcxproj
+++ b/test_uv_a/test_uv_a.vcxproj
@@ -12,9 +12,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{85039DD4-098C-4B31-924A-0F4D884DF2FA}</ProjectGuid>
+    <ProjectGuid>{85039DD4-098C-4B31-924A-0F4D884DF3FD}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>test_uv_6</RootNamespace>
+    <RootNamespace>test_uv_a</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
