--- a/test_uv_3/test_uv_3.vcxproj
+++ b/test_uv_3/test_uv_3.vcxproj
@@ -93,12 +93,15 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="fixed_function.hpp" />
+    <ClInclude Include="ikcp.h" />
     <ClInclude Include="test_xx_uv_coroutine.h" />
     <ClInclude Include="test_xx_uv_stackless.h" />
     <ClInclude Include="xx_bbuffer.h" />
     <ClInclude Include="xx_coroutine.h" />
     <ClInclude Include="xx_list.h" />
     <ClInclude Include="xx_object.h" />
+    <ClInclude Include="xx_random.h" />
     <ClInclude Include="xx_stackless.h" />
     <ClInclude Include="xx_uv.h" />
     <ClInclude Include="xx_uv_coroutine.h" />
